# cpplox

bytelox/: CMakeLists.txt
bytelox/include/: chunk.hpp  common.hpp  compiler.hpp  debug.hpp  hash_table.hpp  lox_object.hpp  lox_value.hpp  scanner.hpp  vm.hpp
bytelox/src/: chunk.cpp  compiler.cpp  debug.cpp  hash_table.cpp  lox_object.cpp  lox_value.cpp  main.cpp  scanner.cpp  vm.cpp
treelox/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  benchmarking.md  bigint.cpp  bigint.h  bigint_test.cpp  class.lox  cmake_install.cmake  compile_commands.json  countlines.sh  fib.lox  inherit.lox  iter_rec.lox  makefile  old_makefile  perf.lox
treelox/extra/: tensor.cpp
treelox/include/: astprinter.h  environment.h  expr.h  interpreter.h  lox.h  lox_object.h  parser.h  resolver.h  runtime_error.h  scanner.h  stmt.h  token.h  treelox.h
treelox/src/: environment.cpp  expr.cpp  interpreter.cpp  lox.cpp  lox_object.cpp  main.cpp  parser.cpp  resolver.cpp  scanner.cpp  stmt.cpp  token.cpp  treelox.cpp
treelox/tests/test/: precedence.lox
treelox/tests/test/break/: for_loop.lox  nested_for.lox  nested_while.lox  no_semicolon.lox  not_identifier.lox  outside_loop.lox  while_loop.lox
treelox/tests/test/comments/: multiline_line_at_eof.lox  multiline_nested.lox  multiline_only_line_comment_and_line.lox
treelox/tests/test/constructor/: arguments.lox
treelox/tests/test/field/: call_function_field.lox  get_and_set_method.lox  method_binds_this.lox
treelox/tests/test/for/: closure_in_body.lox  scope.lox  syntax.lox
treelox/tests/test/function/: local_recursion.lox  parameters.lox  recursion.lox
treelox/tests/test/if/: truth.lox
treelox/tests/test/logical_operator/: and.lox  or.lox  or_truth.lox
treelox/tests/test/method/: arity.lox
treelox/tests/test/number/: literals.lox
treelox/tests/test/operator/: add.lox  divide.lox  multiply.lox  negate.lox  subtract.lox
treelox/tests/test/while/: closure_in_body.lox  syntax.lox
treelox/tests/tool/.dart_tool/: package_config.json
treelox/tool/: generate_ast_statement.cpp  generate_ast_variant.cpp  generate_ast_visitor.cpp  generate_token.cpp
